# Neko

./: .buildinfo  .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  Phosphosites.ipynb  README.md  README.rst  Test.ipynb  Tutorial_v0.9.ipynb  api.html  contents.html  genindex.html  index.html  mkdocs.yml  network  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  sitemap.xml  table.md
.doctrees/: api.doctree  contents.doctree  environment.pickle  index.doctree
.doctrees/_autosummary/: neko._visual.visualize_network.NetworkVisualizer.set_custom_edge_colors.doctree  neko._visual.visualize_network.NetworkVisualizer.set_node_colors.doctree  neko._visual.visualize_network.NetworkVisualizer.tissue_mapping.doctree  neko._visual.visualize_network.NetworkVisualizer.vis_comparison.doctree  neko.core.network.Network.add_edge.doctree  neko.core.network.Network.add_node.doctree  neko.core.network.Network.complete_connection.doctree  neko.core.network.Network.connect_component.doctree  neko.core.network.Network.connect_genes_to_phenotype.doctree  neko.core.network.Network.connect_nodes.doctree  (+5 more)
.github/workflows/: build.yaml  (+3 more)
.ipynb_checkpoints/: Phosphosites-checkpoint.ipynb  Tutorial_v0.9-checkpoint.ipynb  Tutorial_v0.9_1-checkpoint.ipynb
_autosummary/: neko._visual.visualize_network.NetworkVisualizer.render.html  neko._visual.visualize_network.NetworkVisualizer.set_custom_edge_colors.html  neko._visual.visualize_network.NetworkVisualizer.set_node_colors.html  neko._visual.visualize_network.NetworkVisualizer.tissue_mapping.html  neko._visual.visualize_network.NetworkVisualizer.vis_comparison.html  neko._visual.visualize_network.NetworkVisualizer.yfiles_visual.html  neko.core.network.Network.add_edge.html  neko.core.network.Network.add_node.html  neko.core.network.Network.complete_connection.html  neko.core.network.Network.connect_component.html  neko.core.network.Network.connect_genes_to_phenotype.html  neko.core.network.Network.connect_nodes.html  neko.core.network.Network.connect_subgroup.html  neko.core.network.Network.connect_to_upstream_nodes.html  neko.core.network.Network.convert_edgelist_into_genesymbol.html  neko.core.network.Network.is_connected.html  neko.core.network.Network.remove_node.html
_sources/: api.rst.txt  contents.rst.txt  index.rst.txt
api/: index.html
changelog/: index.html
contributing/: index.html
docs_mkdocs/: changelog.md  contributing.md  index.md  installation.md
installation/: index.html
neko/: __init__.py  _metadata.py
notebooks/: 10_Import_and_complete_a_network.html  10_Import_and_complete_a_network.ipynb  11_network_history.ipynb  1_network_building.html  1_network_building.ipynb  2_add_resources.html  2_add_resources.ipynb  3_build_phosphosite_network.html  3_build_phosphosite_network.ipynb  3_stepwise_connection.html  3_stepwise_connection.ipynb  4_Connect_upstream.html  4_Connect_upstream.ipynb  5_build_phosphosite_network.html  5_build_phosphosite_network.ipynb  5_ontology.html  5_ontology.ipynb  6_ontology.html  6_tissue_mapping.html  6_tissue_mapping.ipynb  7_tissue_mapping.html  7_tissue_mapping.ipynb  8_Compare_networks.html  8_Compare_networks.ipynb  9-Recreating_famous_pathways.html  9-Recreating_famous_pathways.ipynb  Benchmarking_strategies.ipynb  Connect_upstream.ipynb  add_resources.ipynb  build_phosphosite_network.ipynb  network_building.ipynb  ontology.ipynb  tissue_mapping.ipynb  yfile_visualization.ipynb
omniflow/: __init__.py
omniflow_project/: __init__.py  _metadata.py
scripts/: benchmark.py  benchmark_original.py  setup_mkdocs_tutorials.sh
search/: search_index.json
sphinx/: .buildinfo  api.html  contents.html  genindex.html  index.html  objects.inv  search.html
stylesheets/: extra.css
tests/: conftest.py  test_algorithms.py  test_core.py  test_data.py  test_import.py  test_inputs.py  test_network.py  test_network_history.py  test_strategies.py  test_twentythree.py
tutorials/: index.html
(+207 files in other folders)
